--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@vue/cli-plugin-vuex": "~5.0.0-alpha.4",
     "@vue/cli-service": "~5.0.0-alpha.4",
     "@vue/compiler-sfc": "^3.0.4",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "tailwindcss": "^2.1.3",
     "typescript": "~4.1.5"
   }
 }
