--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "vue-cli-service build --mode development"
   },
   "dependencies": {
-    "element-plus": "^1.0.1-beta.21",
+    "@types/js-cookie": "^2.2.6",
     "assembly-css": "^1.1.1",
     "axios": "^0.21.1",
     "core-js": "^3.8.1",
+    "element-plus": "^1.0.1-beta.21",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "vue": "^3.0.4",
